Update profile picture, fixed alignment

--- a/style/main.css
+++ b/style/main.css
@@ -147,6 +147,12 @@ h6,
   box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
 }
 
+/* Custom */
+
+.uk-grid {
+  margin-left: 0px;
+}
+
 .image-circle-border {
   display: block;
   position: relative;
